--- a/foundry.toml
+++ b/foundry.toml
@@ -5,4 +5,4 @@ libs = ["lib"]
 solidity_version = "0.8.22"
 evm_version = "shanghai"
 # max gas limit
-gas_limit = 100_000_000_000
+# gas_limit = 100_000_000_000
